Refactored ResourceUtil in group service